# rag-mcp-server

./: .gitignore  README.md  config.yaml  pyproject.toml
src/rag_mcp_server/: __init__.py  __main__.py  chunker.py  config.py  indexer.py  ocr.py  pdf_extractor.py  retriever.py  server.py
